syntax = "proto3";
package kratos.api;

option go_package = "chat/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Registry registry = 3;
}

message Server {
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  GRPC grpc = 1;
}

message Data {
  message ConsumerTopic{
    string outbox_write = 1;
  }
  message ProducerTopic{
    string outbox_write = 1;
    string dead = 2;
  }
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string addr = 1;
    string password = 2;
    int32 db = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
    google.protobuf.Duration dial_timeout = 6;
  }
  message Kafka{
    repeated string brokers = 1;
    string consumer_group = 2;
    ConsumerTopic consumer_topics = 3;
    ProducerTopic producer_topics = 4;
  }
  Database database = 1;
  Redis redis = 2;
  Timeline timeline = 3;
  Kafka kafka = 4;
}

message Registry {
  message ETCD {
    repeated string endpoints = 1;
    string register_server_name = 2;
    string register_end_point = 3;
  }
  ETCD etcd = 3;
}

message Timeline {
  string grpc_addr = 1;
}